# CoreDataX

./: .gitmodules  BUILD.md  README.md  pyproject.toml
api/: loader.py  server.py
schemas/: cdx.json
schemas/equipment/: basicEquipment.json  bhAnalyzer.json  currentSensor.json  currentSource.json  halfBridge.json  oscilloscope.json  voltageSensor.json  voltageSource.json  wattmeter.json
