[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CoreDataX"
version = "0.9.0"
description = "API for uploading data to the PSMA's CoreDataeXchange project."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name="George Slama", email="gslama@wat.midco.net" },
  { name="Alfonso Martinez", email="Alfonso_VII@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "requests",
  "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["api/CoreDataX"]

[project.urls]
Homepage = "https://coredatax.com"
Repository = "https://github.com/CoreDataX/CoreDataX"
Contact = "https://coredatax.com"
